fix: Adjust navigation icons to -10px when collapsed
- Changed margin-top from -8px to -10px
- Navigation icons now move up 10px total when sidebar is collapsed

--- a/src/components/layout/MainSidebar/MainSidebar.scss
+++ b/src/components/layout/MainSidebar/MainSidebar.scss
@@ -134,7 +134,7 @@
 
   // Ajustar posición de navegación cuando está colapsada
   &--collapsed &__nav {
-    margin-top: -8px;
+    margin-top: -10px;
   }
 
   &__secondary {
